--- a/example.mpp.yml
+++ b/example.mpp.yml
@@ -32,6 +32,6 @@ pipelines:
     options:
       users:
         guest:
-          password: "$6$xoLqEUz0cGGJRx01$H3H/bFm0myJPULNMtbSsOFd/2BnHqHkMD92Sfxd.EKM9hXTWSmELG8cf205l6dktomuTcgKGGtGDgtvHVXSWU."
+          password: "$6$xoLqEUz0cGGJRx01$H3H/bFm0myJPULNMtbSsOFd/2BnHqHkMD92Sfxd.EKM9hXTWSmELG8cf205l6dktomuTcgKGGtGDgtvHVXSWU." # notsecret
           gid: 999
           uid: 999
